--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     margin: auto;
   /*width: 745px;*/
   overflow-wrap: hidden;
-  width: 720px;
+  max-width: 720px;
   height: 414px;
   /*margin: 0;*/
   padding: 0;
@@ -30,11 +30,13 @@
 }
 .Cblock {
   /*margin-right: 8px;*/
-  width: 240px;
+  width: 33.3%;
   height: 240px;
   background: #fff;
   display: inline-block;
   background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   
 }
 
@@ -60,7 +62,7 @@
 .sentece6{content:"6";background-image:url("img/sentece/type06.png");}
 
 .go {
-  width: 720px;
+  width: 100%;
   height: 173px;
   background:#8BB530;
   font-size: 80px;
