--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <style type="text/css">
   body{
+    font-family: "OpenSans", sans-serif;
     margin:0 auto;
     padding:0;
     background-color: #2e5725
@@ -38,18 +39,33 @@
   height: 414px;
   /*margin: 0;*/
   padding: 0;
-  background: #fafafa;
+  /*background: #fafafa;*/
 }
 .random_block {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.random_block:before{
+  content: "Press Spiel to begin";
+  font-weight: 600;
+display: block;
+width: 100%;
+height:300px;
+vertical-align: middle;
+text-align: center;
+position: absolute;
+left: 0;
+top:120px;
+z-index: -2;
+color:#fff;
 }
 .Cblock {
   /*margin-right: 8px;*/
   width: 33.3%;
   height: 240px;
-  background: #fff;
+  background: transparent;
   display: inline-block;
   background-size: contain;
   background-position: center;
@@ -82,6 +98,7 @@
   width: 100%;
   height: 173px;
   background:#8BB530;
+  font-weight: 600;
   font-size: 80px;
   color: #FFFFFF;
   border:none;
